--- a/AngularClient/app/user/userListView.html
+++ b/AngularClient/app/user/userListView.html
@@ -49,7 +49,7 @@
                                 <button ng-if="user.Role =='admin'" class="btn btn-default" ng-click="ctrl.demote(user.UserID)">Demote&nbsp;</button>
                                 <button ng-if="user.Role =='user'" class="btn btn-default" ng-click="ctrl.promote(user.UserID)">Promote</button>
                                 <button class="btn btn-default" ng-click="vm.changePage(ctrl.viewSendMessage(user.UserID, user.Username))">Send message</button>
-                                <button class="btn btn-default" ng-click="vm.deleteUser(user.UserID)">Delete</button>
+                                <button class="btn btn-default" ng-click="ctrl.deleteUser(user.UserID)">Delete</button>
                             </div>
                         </td>
                     </tr>
